--- a/Projects/Memory_Card_Game/Pages/mainGame.html
+++ b/Projects/Memory_Card_Game/Pages/mainGame.html
@@ -9,68 +9,68 @@
         <h1>Test your memory now!</h1>
         <div class="container">
             <div class="card" data-image="c++">
-                <img src="./images/c++.png" class="frontSide" alt="C++">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/c++.png" class="frontSide" alt="C++">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="c++">
-                <img src="./images/c++.png" class="frontSide" alt="C++">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/c++.png" class="frontSide" alt="C++">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="css">
-                <img src="./images/css.png" class="frontSide" alt="CSS">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/css.png" class="frontSide" alt="CSS">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="css">
-                <img src="./images/css.png" class="frontSide" alt="CSS">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/css.png" class="frontSide" alt="CSS">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="html">
-                <img src="./images/html.png" class="frontSide" alt="HTML5">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/html.png" class="frontSide" alt="HTML5">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="html">
-                <img src="./images/html.png" class="frontSide" alt="HTML5">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/html.png" class="frontSide" alt="HTML5">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="java">
-                <img src="./images/java.jpg" class="frontSide" alt="Java">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/java.jpg" class="frontSide" alt="Java">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="java">
-                <img src="./images/java.jpg" class="frontSide" alt="Java">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/java.jpg" class="frontSide" alt="Java">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="javascript">
-                <img src="./images/javascript.png" class="frontSide" alt="Javascript">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/javascript.png" class="frontSide" alt="Javascript">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="javascript">
-                <img src="./images/javascript.png" class="frontSide" alt="Javascript">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/javascript.png" class="frontSide" alt="Javascript">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="kotlin">
-                <img src="./images/kotlin.jpg" class="frontSide" alt="Kotlin">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/kotlin.jpg" class="frontSide" alt="Kotlin">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="kotlin">
-                <img src="./images/kotlin.jpg" class="frontSide" alt="Kotlin">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/kotlin.jpg" class="frontSide" alt="Kotlin">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="php">
-                <img src="./images/php.png" class="frontSide" alt="PHP">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/php.png" class="frontSide" alt="PHP">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="php">
-                <img src="./images/php.png" class="frontSide" alt="PHP">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/php.png" class="frontSide" alt="PHP">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="python">
-                <img src="./images/python.jpg" class="frontSide" alt="Python">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/python.jpg" class="frontSide" alt="Python">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
             <div class="card" data-image="python">
-                <img src="./images/python.jpg" class="frontSide" alt="Python">
-                <img src="./images/back.jpg" class="backSide" alt="backLogo">
+                <img src="./Assets/media/images/python.jpg" class="frontSide" alt="Python">
+                <img src="./Assets/media/images/back.jpg" class="backSide" alt="backLogo">
             </div>
         </div>
         <script src="index.js"></script>
