Added a To Do List

--- a/Projects/Project_Structure/to do list/pages/sample.html
+++ b/Projects/Project_Structure/to do list/pages/sample.html
@@ -40,7 +40,7 @@
                         </div>
                        
                         <div class="card-content">
-                            <h5 id="task-title">UR TASKS</h5>
+                            <h5 id="task-title">TASK LIST</h5>
                             <div class="input-field col s12">
                                 <input type="text" name="filter" id="filter">
                                 <label >Filter Task</label>
