--- a/Projects/Weather-App/index.html
+++ b/Projects/Weather-App/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./Assets/css/style.css">
 
 </head>
 
@@ -40,7 +40,7 @@
   <div class="footer">
      <h4 >Designed & Developed with &#10084;&#65039; by Atif</h4>
   </div>
-<script src="./script.js" defer></script>
+<script src="./Script/script.js" defer></script>
 </body>
 
 </html>
