--- a/Projects/Snake Game/index.html
+++ b/Projects/Snake Game/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="./assets/CSS/style.css" />
  </head>
- <body>
+ <body
+ style="background-image:url(./assets/media/images/wp2409705.jpg);">
   Speed:
   <input type="number" id="gameSpeed" value="5" min="1" max="9" step="1" />
 
