Added a To Do List

--- a/Projects/Project_Structure/to do list/pages/index.html
+++ b/Projects/Project_Structure/to do list/pages/index.html
@@ -35,6 +35,8 @@
                                     <label>ENTER</label>
                                 </div>
                                     <input type="submit" value="ADD A TASK" class="btn-floating">
+                                   <input type="reset"  value="C" onclick="formm.display.value=' '" name="clear" class="btn-floating">
+                
                             </form>
                             </div>
                         </div>
