--- a/Projects/Tic-Tac-Toe Game/index.html
+++ b/Projects/Tic-Tac-Toe Game/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -83,7 +83,7 @@
         }
     </script>
 
-    <script src="script.js"></script>
+    <script src="./Scripts/script.js"></script>
 </body>
 
 </html>
