--- a/Projects/TinDog/index.html
+++ b/Projects/TinDog/index.html
@@ -174,7 +174,7 @@
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
     <p>Unlimited App Usage</p>
-    <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+    <button type="button" class="btn btn-block btn-dark btn-lg">Sign Up</button>
       </div>
     </div>
   </div>
@@ -201,10 +201,9 @@
       </div>
       <div class="card-body">
         <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
+    <p>Priority Listing</p>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
     <button type="button" class="btn btn-block btn-dark btn-lg">Sign Up</button>
       </div>
     </div>
