--- a/Projects/Lets practice/index.html
+++ b/Projects/Lets practice/index.html
@@ -21,7 +21,7 @@
               <br><br>
             </div>
             <div class="content" >
-              <h1>Substraction</h1>
+              <h1>Subtraction</h1>
               <a href="scripts\sub.html"><button class="btn">Start</button></a>
               <br><br>
             </div>
