--- a/Projects/The Dice Game/index.html
+++ b/Projects/The Dice Game/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <title>🎲Dicee</title>
     <link rel="stylesheet" href="Assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
     </div>
     
     <footer>
-      🎲Play🎲Games🎲2021
+      🎲Play🎲The Dice Game🎲2021
     </footer>
 
     <script src="index.js" charset="utf-8"></script>
