--- a/Projects/timer/index.html
+++ b/Projects/timer/index.html
@@ -25,6 +25,6 @@
 <body>
     <h1>New year begins in</h1>
     <p id="demo"></p>
-    <script src="index.js"></script>
+    <script src="script\index.js"></script>
 </body>
 </html>
