--- a/Projects/Youtube-Clone/index.html
+++ b/Projects/Youtube-Clone/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>YouTube</title>
 	<link rel="stylesheet" type="text/css" href="./Assets/css/styles.css">
-	<link rel="icon" type="image/icon" href="Resources/favicon_32x32.png" sizes="32x32">
+	<link rel="icon" type="image/icon" href="./Assets/media/favicon_32x32.png" sizes="32x32">
 	<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 	<meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"  />
 </head>
@@ -16,7 +16,7 @@
 				<span class="iconify hamburger" data-icon="ci:hamburger" data-inline="false"></span>
 			</div>
 			<div class = "logo">	
-				<img class = "logo-img" src = "Resources/youtube_logo.webp">
+				<img class = "logo-img" src = "./Assets/media/youtube_logo.webp">
 				<span class = "country-code">IN</span>
 			</div>
 		</div>
