--- a/Projects/The Dice Game/index.html
+++ b/Projects/The Dice Game/index.html
@@ -29,6 +29,6 @@
       🎲Play🎲The Dice Game🎲2021
     </footer>
 
-    <script src="index.js" charset="utf-8"></script>
+    <script src="scripts/index.js" charset="utf-8"></script>
   </body>
 </html>
